create_event desktop css and profile desktop design arrangements

--- a/src/css/style_desktop.css
+++ b/src/css/style_desktop.css
@@ -98,10 +98,7 @@
         box-shadow:5px 5px 10px rgba(48, 68, 94, 0.35);
         border-radius: 10px;
         padding: 8px 20px;
-    }
-
-    .div_inline {
-        display: inline-block;
+        border: none;
     }
 
     .star-container {
@@ -135,20 +132,14 @@
         opacity: 1;
     }
 
-    .flex_profile {
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-    }
-
     .indexInput {
         padding-left: 20px;
     }
 
     .buttonLogIn {
-        background: #0d213a;
+        background: #283d8f;
         border-radius: 999px;
-        box-shadow: #0d213a 0 10px 20px -10px;
+        box-shadow: #283d8f 0 10px 20px -10px;
         box-sizing: border-box;
         color: #E8EEFFFF;
         font-size: 2.5rem;
@@ -156,7 +147,7 @@
         line-height: 4rem;
         opacity: 1;
         outline: 0 solid transparent;
-        padding: 15px 25px;
+        padding: 10px 20px;
         user-select: none;
         touch-action: manipulation;
         border: 0;
@@ -178,7 +169,7 @@
         line-height: 4rem;
         opacity: 1;
         outline: 0 solid transparent;
-        padding: 15px 25px;
+        padding: 10px 20px;
         user-select: none;
         touch-action: manipulation;
         border: 0;
@@ -309,13 +300,12 @@
 
     .logout_profile {
         color: darkred;
-        padding: 1rem;
+        padding: 1.5rem;
     }
 
     .logout_profile:hover {
         color: whitesmoke;
         background-color: darkred;
-        padding: 1rem;
         border-radius: 50rem;
     }
 
@@ -330,26 +320,34 @@
     }
 
     .flex_profile_info {
-        width: 50rem;
+        width: 70rem;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
 
+    .flex_profile_info div {
+        align-items: flex-start;
+    }
+
     .profile_info_theme h3 {
-        padding: 1.2rem;
+        justify-items: center;
+        padding-bottom: 1.5rem;
+        padding-top: 1.5rem;
     }
 
     .profile_info_theme_input h3 {
         color: #0c2341;
         border: solid 0.2rem #5b5a5a;
-        padding: 1rem;
+        padding: 1.5rem;
         border-radius: 1rem;
-        font-weight: unset;
+        font-weight: lighter;
+        width: 200px;
     }
 
     .edit_profile_link {
         color: black;
+        margin-bottom: 10px;
     }
 
     .edit_profile_img {
@@ -357,7 +355,7 @@
     }
 
     .done_profile {
-        padding: 1rem;
+        padding: 1.5rem;
         color: whitesmoke;
         background-color: darkgreen;
         border-radius: 5rem;
@@ -371,8 +369,8 @@
     .flex_edit_buttons {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
-        margin-left: 22rem;
+        align-items: end;
+        margin-left: 35rem;
     }
 
     .star-container {
@@ -715,6 +713,34 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .create_event_select {
+        width: 200px;
+        height: 30px;
+        border-radius: 10px;
+        border: none;
+        color: #fff;
+        background: rgba(46, 50, 93, 0.89);
+        text-align: left;
+        padding: 0 15px;
+        font-size: 2.5rem;
+        cursor: pointer;
+    }
+
+    .create_event_select:active{
+        color: rgba(46, 50, 93, 0.89);
+        background-color: white;
+    }
+
+    .button_event_creation{
+        border: none;
+        font-size: 2rem;
+        color: white;
+        background-color: rgba(10, 7, 75, 0.81);
+        border-radius: 30px;
+        padding: 15px 30px;
+        margin-bottom: 3rem;
     }
 
 }
