--- a/src/css/style_desktop.css
+++ b/src/css/style_desktop.css
@@ -515,7 +515,7 @@
         font-size: 2.2rem;
         color: white;
         border-radius: 10px;
-        background: #342e8a;
+        background: rgba(3, 50, 107, 0.96);
         padding: 10px 8px;
         margin-top: 15px;
     }
@@ -540,22 +540,21 @@
         background-color: rgba(197, 209, 224, 0.86);
         box-shadow: 5px 3px 20px rgba(60, 83, 115, 0.51);
         border-radius: 8px;
-        padding: 5px 20px;
+        padding: 0 15px;
         margin: 20px 0;
         align-items: center;
     }
 
     .button_create_event{
         color: white;
-        background-color: #2e438a;
+        background: rgba(3, 50, 107, 0.96);
         border-radius: 8px;
-        padding: 10px 20px;
+        padding: 8px 10px;
         font-size: 2.5rem;
     }
 
     .box_eventer h5{
         font-size: 2rem;
-        line-height: 2rem;
     }
 
     .events_list {
@@ -572,11 +571,10 @@
     }
 
     .event_title_box{
-        background-color: rgba(128, 70, 168, 0.32);
         margin-top: 0;
         margin-bottom: 10px;
         border-radius: 8px;
-        width: 250px;
+        width: 300px;
         padding: 15px 0;
         text-align: center;
         font-size: 3rem;
@@ -728,7 +726,7 @@
         cursor: pointer;
     }
 
-    .create_event_select:active{
+    .create_event_select:active {
         color: rgba(46, 50, 93, 0.89);
         background-color: white;
     }
