--- a/src/css/style_mobile.css
+++ b/src/css/style_mobile.css
@@ -122,6 +122,34 @@ a {
     horiz-align: center;
 }
 
+.category_music{
+    background-color: rgba(140, 64, 143, 0.71);
+}
+
+.category_education{
+    background-color: rgba(215, 52, 52, 0.32);
+}
+
+.category_sports{
+    background-color: rgba(52, 128, 215, 0.32);
+}
+
+.category_games{
+    background-color: rgba(128, 70, 168, 0.32);
+}
+
+.category_travel{
+    background-color: rgba(65, 155, 67, 0.59);
+}
+
+.category_food{
+    background-color: rgba(220, 103, 6, 0.62);
+}
+
+.category_other{
+    background-color: rgba(215, 174, 36, 0.87);
+}
+
 @media (max-device-width: 420px) {
 
     main {
@@ -602,7 +630,6 @@ a {
     }
 
     .event_title_box{
-        background-color: rgba(128, 70, 168, 0.32);
         margin-top: 0;
         margin-bottom: 10px;
         border-radius: 8px;
