--- a/src/css/style_mobile.css
+++ b/src/css/style_mobile.css
@@ -158,6 +158,34 @@ a {
     background-color: rgba(215, 174, 36, 0.87);
 }
 
+.delete_size {
+    font-size: 2.5rem;
+}
+
+.delete_profile_anyway {
+    padding: 2rem;
+    color: whitesmoke;
+    background-color: darkred;
+    border-radius: 5rem;
+}
+
+.delete_profile_anyway:hover {
+    background-color: whitesmoke;
+    color: darkred;
+}
+
+.delete_cancel {
+    padding: 2rem;
+    color: darkred;
+    background-color: whitesmoke;
+    border-radius: 5rem;
+}
+
+.delete_cancel:hover {
+    background-color: darkred;
+    color: whitesmoke;
+}
+
 @media (max-device-width: 420px) {
 
     main {
@@ -526,7 +554,6 @@ a {
     .delete_profile:hover {
         background-color: whitesmoke;
         color: darkred;
-
     }
 
     .comments_profile {
